# rusty-console

./: .clinerules  .gitignore  CLAUDE.md  Cargo.toml  EVOLUTION.md  PLAN.md  README.md  STACK_EVOLUTION.md  UI_REFACTORING.md  architecture_logs_26042026.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: container.rs  errors.rs  image.rs  lib.rs  main.rs  shared.rs  stack.rs  ui.rs  volume.rs
src/01_domain/: error.rs  mod.rs
src/01_domain/container/: mod.rs  state.rs  value_objects.rs
src/01_domain/image/: entity.rs  mod.rs  value_objects.rs
src/01_domain/stack/: container.rs  entity.rs  mod.rs  value_objects.rs
src/01_domain/volume/: entity.rs  mod.rs  value_objects.rs
src/02_application/: error.rs  mod.rs
src/02_application/container/: dto.rs  mapper.rs  mod.rs  service.rs  traits.rs
src/02_application/image/: mapper.rs  mod.rs  service.rs  traits.rs
src/03_infrastructure/: error.rs  mod.rs
src/04_presentation/: mod.rs
src/application/: error.rs  mod.rs
src/docker/: mod.rs
src/domain/: error.rs  mod.rs
src/domain/image/: entity.rs  (+1 more)
src/errors/: application.rs  domain.rs  infrastructure.rs  mod.rs
src/infrastructure/: error.rs  mod.rs
src/ui/: app.rs  event.rs  mod.rs
xx_learning/: 01_ownership_and_borrowing.md  02_control_flow_if_and_match.md  03_option_result_and_non_nullable_returns.md  04_traits_and_trait_objects.md  05_async_with_tokio.md  06_terminal_ui_with_crossterm_and_ratatui.md  07_testing_in_this_project.md  08_from_rust_basics_to_project_architecture.md  README.md
(+122 files in other folders)
