[package]
name = "rusty_console"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Docker API
bollard = "0.18"

# Async streams
futures-util = "0.3"

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Async traits
async-trait = "0.1"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
